fix style title and cfa icon : size and alignement

--- a/frontend/themes/cfavaadin-custom/styles.css
+++ b/frontend/themes/cfavaadin-custom/styles.css
@@ -17,7 +17,7 @@ a{
     font-size: 1.2rem;
 }
 .cfa-icon{
-    width: 12rem;
+    width: 8rem;
     margin: 1rem;
     align-self: center;
     justify-self: center;
@@ -43,7 +43,7 @@ th{
     background: var(--lumo-base-color);
 }
 h1, :host{
-    text-align: center;
+    margin-left: 1rem;
 }
 header{
     width: 100%;
